# picht

./: .~lock.requirements.txt#  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PKG-INFO  README.md  paper.bib  paper.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: tests.yml
docs/: .buildinfo  api.html  api.rst  conf.py  genindex.html  gettingstarted.html  gettingstarted.rst  index.html  index.rst  objects.inv  physics.html  physics.rst  search.html  searchindex.js  sg_execution_times.html  sg_execution_times.rst
docs/.doctrees/: api.doctree  environment.pickle  gettingstarted.doctree  index.doctree  physics.doctree  sg_execution_times.doctree
docs/.doctrees/auto_examples/: 01_example_cylindrical_lens.doctree  02_example_einzel_focusing.doctree  03_example_einzel.doctree  04_example_sem.doctree  05_example_magnetic.doctree  example_cylindrical_lens.doctree  example_einzellens_deflection.doctree  example_einzellens_defocusing.doctree  example_einzellens_focusing.doctree  example_sem_simulation.doctree  index.doctree  sg_execution_times.doctree
docs/.doctrees/recover_docs/: api.doctree  gettingstarted.doctree  physics.doctree  sg_execution_times.doctree
docs/_build/html/: .buildinfo  api.html  genindex.html  gettingstarted.html  index.html  objects.inv  physics.html  search.html  searchindex.js  sg_execution_times.html
docs/_downloads/1a90c4faf37b94ca3be10bbcba7cbd0a/: 04_example_sem.py
docs/_downloads/4671a1bdd606c88a81621e90969b58f5/: 05_example_magnetic.ipynb
docs/_downloads/71f0908a93af8a31f3bc44dca402ec3c/: 03_example_einzel.ipynb
docs/_downloads/78845fafa43ceca5886e7b738bf62a8e/: 01_example_cylindrical_lens.py
docs/_modules/: index.html
docs/_sources/: api.rst.txt  index.rst.txt  sg_execution_times.rst.txt
docs/auto_examples/: 01_example_cylindrical_lens.codeobj.json  01_example_cylindrical_lens.html  01_example_cylindrical_lens.py  01_example_cylindrical_lens.py.md5  01_example_cylindrical_lens.rst  02_example_einzel_focusing.codeobj.json  02_example_einzel_focusing.py.md5  02_example_einzel_focusing.rst  03_example_einzel.codeobj.json  03_example_einzel.html  03_example_einzel.py  03_example_einzel.py.md5  04_example_sem.codeobj.json  04_example_sem.html  04_example_sem.ipynb  04_example_sem.py  04_example_sem.py.md5  04_example_sem.rst  05_example_magnetic.codeobj.json  05_example_magnetic.html  05_example_magnetic.py  05_example_magnetic.py.md5  example_cylindrical_lens.codeobj.json  example_cylindrical_lens.html  example_cylindrical_lens.py  example_cylindrical_lens.py.md5  example_cylindrical_lens.rst  example_einzellens_deflection.html  example_einzellens_deflection.py.md5  example_einzellens_deflection.rst  example_einzellens_defocusing.html  example_einzellens_defocusing.py.md5  example_einzellens_defocusing.rst  example_einzellens_focusing.html  example_einzellens_focusing.py  example_einzellens_focusing.py.md5  example_sem_simulation.codeobj.json  example_sem_simulation.html  example_sem_simulation.py.md5  example_sem_simulation.rst  (+3 more)
docs/recover_docs/: api.html  conf.py  gettingstarted.html  index.html  index.rst  physics.html  physics.rst  sg_execution_times.html
examples/: 01_example_cylindrical_lens.py  05_example_magnetic.py  README.rst  sem.py
images/: File.md
picht/: __init__.py  core.py  electron_column.py  electrostaticlens.py  example.py  magnetostaticlens.py  sem.py  test.py  unit_test.py
picht.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_picht.py
(+44 files in other folders)
