[build-system]
requires = ["setuptools>=61.0", "wheel", "numpy==1.26.4"]
build-backend = "setuptools.build_meta"

[project]
name = "picht"
version = "1.1.4"
description = "Electron and ion optics simulation using the Finite Difference Method (FDM)"
readme = "README.md"
requires-python = ">=3.6"
license = "MIT"

authors = [
    {name = "Rishiit Sharma", email = "rishiitsharma@gmail.com"}
]

dependencies = [
    "numpy==1.26.4",
    "matplotlib",
    "scipy",
    "numba",
    "mendeleev",
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Physics",
    "Intended Audience :: Science/Research",
    "Development Status :: 5 - Production/Stable"
]

[project.urls]
Homepage = "https://github.com/rolypolytoy/picht"